--- a/Blog/package.json
+++ b/Blog/package.json
@@ -5,16 +5,23 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@apollo/client": "^3.10.3",
+    "@emotion/styled": "^11.11.5",
+    "@reach/router": "^1.3.4",
     "gatsby": "^5.13.3",
+    "gatsby-plugin-apollo": "^4.0.3",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "gh-pages": "^6.1.1",
+    "query-string": "^9.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-query-params": "^2.2.1"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
